--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>SBADC | Contact</title>
+    <title>icvp| Contact</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
@@ -60,7 +60,7 @@
                   </div>
                   <div class="mu-top-phone">
                     <i class="fa fa-phone"></i>
-                    <span>+91-94528-29491</span>
+                    <span>03221-201136</span>
                   </div>
                 </div>
               </div>
@@ -100,6 +100,7 @@
           <!-- TEXT BASED LOGO -->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO  -->
+         
           <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg" alt="logo"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
