--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
           <!-- TEXT BASED LOGO -->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO  -->
-         
+          <nobr>  <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption></nobr>
           <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg" alt="logo"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -266,7 +266,7 @@
                 <h4>Contact</h4>
                 <address>
                   <p>Address:  Jhargram,savayatan,721514,west Bengal </p>
-                  <p>Phone: +91-94528-29491</p>
+                  <p>Phone: 03221-201136/p>
                   <p>Website: icvpolytechnic.ac.inin</p>
                   <p>Email: icv@wbscte.ac.in</p>
                 </address>
@@ -281,7 +281,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved. by chitradip & Subhamkumer  <a>&hearts;</a> by <a href="mailto:ashraygupta6@gmail.com" >Ashray Gupta</a></p>
+          <p>&copy; All Right Reserved. by chitradip & Subhamkumer  <a>&hearts;</a> by <a href="" >Ashray Gupta</a></p>
         </div>
       </div>
     </div>
