--- a/course-detail.html
+++ b/course-detail.html
@@ -98,6 +98,7 @@
           <!-- TEXT BASED LOGO -->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Varsity</span></a>-->
           <!-- IMG BASED LOGO  -->
+           <nobr>  <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption></nobr>
           <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg" alt="logo"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -185,16 +186,15 @@
                           <ul>
                             <!--<li> <span>Course Price</span> <span>$250</span></li>
                             <li> <span>Total Students</span> <span>800+</span></li>-->
-                            <li> <span>Place</span> <span>Kukuhi,Near Balamau Junction Railway Station,Hardoi</span></li>
-                            <li> <span>Course Duration</span> <span>4 Years</span></li>
-                            <li> <span>Course Start</span> <span>August, 2019</span></li>
-                            <li> <span>Eligibility Criteria</span> <span>10+2 Passed in PCB,PCM or Agriculture</span></li>
+                            <li> <span>Place</span> <span>jhargram,savayatan,721514</span></li>
+                            <li> <span>Course Duration</span> <span>3Years& 2year diploma in engineering</span></li>
+                            <li> <span>Course Start</span> <span>August, 2021</span></li>
+                            <li> <span>Eligibility Criteria</span> <span>10,10+2 pass with jexpo &voclate </span></li>
                             <li> <span>Docs. Required</span> <span>10+2 Marksheet, Aadhar, 2 Photos</span></li>
                             <li> <span>Admission Form</span> <span><a href="/assets/admissionform.pdf" download="admissionform.pdf">Download Your Admission Form here!</a></span></li>
                           </ul>
                           <h4>Description</h4>
-                          <p>Typically offered as a Bachelor of Science (BSc Agriculture),  agriculture courses are highly interdisciplinary, requiring students to have a good grasp of both natural sciences and social sciences, and drawing on areas such as biology, environmental sciences, chemistry, economics and business and management. You will first build a strong scientific foundation in agriculture by studying biology, natural environments, agricultural production and agricultural science. As the course continues, you’ll usually be able to personalize your degree with optional modules to reflect your interests. The range and combination of topics taught will vary depending on the institution. Some agriculture courses focus on preparing students for work at an international level – covering topics such as bio-based economies, sustainability on a global scale, and global food systems.
-                            Others will have focus on agriculture within a specific country or region, or on a particular aspect of agriculture – such as crop farming, marketing of farm products, animal care, sustainable practices, or large property management. Overall, you’ll gain a wide range of technical skills and knowledge, as well as an understanding of the scientific, moral and commercial principles behind the agricultural industry.</p>
+                          <p>Ishwar Chandra Vidyasagar Polytechnic, (also known as I.C.V. Polytechnic), established in 1957, is a government polytechnic located in Jhargram, West Bengal. This polytechnic is affiliated to the West Bengal State Council of Technical Education, and recognised by AICTE, New Delhi. This polytechnic offers diploma courses in Computer Science and Engineering, Electrical, Electronics and Telecommunication, Mechanical, Metallurgical and Civil Engineering.</p>
                           <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo est itaque vero porro quasi illo ex consequuntur ad animi commodi, ipsam provident voluptas vel adipisci. Minima repellendus vel est, sequi labore quo ipsa voluptatem officiis ex fuga nemo quas. Eligendi inventore ducimus omnis, maxime, alias accusantium similique minus! Labore facilis qui, sunt, ipsam consectetur minus sapiente saepe numquam magnam quidem.</p>
                           <blockquote>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, placeat, ipsa. Modi sed quibusdam vel autem fugit, eaque, iste. Excepturi fugit dignissimos suscipit dolor perferendis debitis magni sed, quia ab.</p>
@@ -487,10 +487,10 @@
                 <div class="mu-footer-widget">
                   <h4>Contact</h4>
                   <address>
-                    <p>Address: Kukuhi,Kachhauna,Near Balamau Junction Railway Station,Hardoi,Uttar Pradesh</p>
-                    <p>Phone: +91-94528-29491</p>
-                    <p>Website: www.sbadc.org</p>
-                    <p>Email: info@sbadc.edu</p>
+                    <p>Address: jhargram,savayatan,721514</p>
+                    <p>Phone: 03221-201136</p>
+                    <p>Website: http://icvpolytechnic.in/</p>
+                    <p>Email: icvpolytechnic@gmail.com</p>
                   </address>
                 </div>
               </div>
