--- a/course.html
+++ b/course.html
@@ -229,7 +229,7 @@
                       </div>
                     </div> 
                   </div>-->
-                  <!--<div class="col-md-6 col-sm-6">
+                  <div class="col-md-6 col-sm-6">
                     <div class="mu-latest-course-single">
                       <figure class="mu-latest-course-img">
                         <a href="#"><img src="assets/img/courses/2.jpg" alt="img"></a>
@@ -248,7 +248,7 @@
                       </div>
                     </div>
                   </div>-->
-                  <!--<div class="col-md-6 col-sm-6">
+                  <div class="col-md-6 col-sm-6">
                     <div class="mu-latest-course-single">
                       <figure class="mu-latest-course-img">
                         <a href="#"><img src="assets/img/courses/1.jpg" alt="img"></a>
@@ -290,7 +290,7 @@
                 </div>
                 <!-- end course content container -->
                 <!-- start course pagination -->
-                <!--<div class="mu-pagination">
+                <div class="mu-pagination">
                   <nav>
                     <ul class="pagination">
                       <li>
@@ -317,7 +317,7 @@
                 <!-- start sidebar -->
                 <aside class="mu-sidebar">
                   <!-- start single sidebar -->
-                  <!--<div class="mu-single-sidebar">
+                  <<div class="mu-single-sidebar">
                     <h3>Categories</h3>
                     <ul class="mu-sidebar-catg">
                       <li><a href="#">Web Design</a></li>
@@ -330,7 +330,7 @@
                   </div>-->
                   <!-- end single sidebar -->
                   <!-- start single sidebar -->
-                  <!--<div class="mu-single-sidebar">
+                  <div class="mu-single-sidebar">
                     <h3>Popular Course</h3>
                     <div class="mu-sidebar-popular-courses">
                       <div class="media">
@@ -367,8 +367,8 @@
                         </div>
                       </div>
                     </div>
-                  </div>-->
-                  <!-- end single sidebar -->
+                  </div>
+                  <!--  end single sidebar -->
                   <!-- start single sidebar -->
                   <!--<div class="mu-single-sidebar">
                     <h3>Archives</h3>
@@ -383,7 +383,7 @@
                   </div>-->
                   <!-- end single sidebar -->
                   <!-- start single sidebar -->
-                  <!--<div class="mu-single-sidebar">
+                  <div class="mu-single-sidebar">
                     <h3>Tags Cloud</h3>
                     <div class="tag-cloud">
                       <a href="#">Health</a>
@@ -452,10 +452,10 @@
               <div class="mu-footer-widget">
                 <h4>Contact</h4>
                 <address>
-                  <p>Address: Kukuhi,Kachhauna,Near Balamau Junction Railway Station,Hardoi,Uttar Pradesh</p>
-                  <p>Phone: +91-94528-29491</p>
-                  <p>Website: www.sbadc.org</p>
-                  <p>Email: info@sbadc.edu</p>
+                  <p>Address: jhargram,savayatan,721455/p>
+                  <p>Phone:03221-201136-</p>
+                  <p>Website: http://icvpolytechnic.in/</p>
+                  <p>Email:icvpolytechnic@gmail.com</p>
                 </address>
               </div>
             </div>
@@ -468,7 +468,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved. Designed with <a>&hearts;</a> by <a href="mailto:ashraygupta6@gmail.com" >Ashray Gupta</a></p>
+          <p>&copy; All Right Reserved. Designed with <a>&hearts;</a> by <a href="mailto:chitradipgiri6@gmail.com" >chitradip giri</a></p>
         </div>
       </div>
     </div>
