--- a/course.html
+++ b/course.html
@@ -370,7 +370,7 @@
                   </div>
                   <!--  end single sidebar -->
                   <!-- start single sidebar -->
-                  <!--<div class="mu-single-sidebar">
+                  <div class="mu-single-sidebar">
                     <h3>Archives</h3>
                     <ul class="mu-sidebar-catg mu-sidebar-archives">
                       <li><a href="#">May <span>(25)</span></a></li>
@@ -422,7 +422,7 @@
                   <li><a href="index.html#mu-features">Features</a></li>
                   <li><a href="course.html">Course</a></li>
                   <li><a href="blog-archive.html">Event</a></li>
-                  <!--<li><a href="">Sitemap</a></li>
+                  <li><a href="">Sitemap</a></li>
                   <li><a href="">Term Of Use</a></li>-->
                 </ul>
               </div>
