--- a/course.html
+++ b/course.html
@@ -177,13 +177,13 @@
                       <figure class="mu-latest-course-img">
                         <a href="#"><img src="assets/img/courses/1.jpg" alt="img"></a>
                         <figcaption class="mu-latest-course-imgcaption">
-                          <a href="course-detail.html">Bachelor of Science in Agriculture</a>
-                          <span><i class="fa fa-clock-o"></i>4Years</span>
+                          <a href="course-detail.html">diploma in machanical engineering</a>
+                          <span><i class="fa fa-clock-o"></i>3Years</span>
                         </figcaption>
                       </figure>
                       <div class="mu-latest-course-single-content">
                         <!--<h4><a href="#">Lorem ipsum dolor sit amet.</a></h4>-->
-                        <p>Poverty, famine, development economics, genetic modification, environmental sustainability, disease epidemics… agriculture intersects with all of these, and agricultural graduates are involved in research and development work in all these fields.Read on for an overview of agriculture courses, specializations, key skills and possible agriculture careers.</p>
+                        <p>The Mechanical Engineering Department is one of the 3 core departments of M.S.G.Polytechnic, established in the year of 2016. M.S.G.Polytechnic Mechanical Engineering Department has been providing excellent learning opportunities for diploma students, it has intake capacity of 60 students, right now we have 69 students in first year class, 42 students in second year class and 37 students in third year class .Mechanical Engineering remains at the core of all advancements in Engineering & Technology. The department is well developed with infrastructures & laboratories as per the AICTE norms. The dept. is enriched with highly qualified faculty members and technical staff. Regular industrial visits & trainings are organized. Personal attention is given to each student through tutor-guardian relationship. Students of Mechanical Engineering always remain at the forefront of all activities in the institute.</p>
                         <div class="mu-latest-course-single-contbottom">
                           <a class="mu-course-details" href="course-detail.html">Details,Docs,Form</a>
                           <!--<span class="mu-course-price" href="#">$165.00</span>-->
@@ -191,7 +191,7 @@
                       </div>
                     </div>
                   </div>
-                  <!--<div class="col-md-6 col-sm-6">
+                  <div class="col-md-6 col-sm-6">
                     <div class="mu-latest-course-single">
                       <figure class="mu-latest-course-img">
                         <a href="#"><img src="assets/img/courses/2.jpg" alt="img"></a>
